--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -51,7 +51,9 @@ under the License.
       </span>
     </a>
     <div class="toc-wrapper">
-      <%= image_tag "logo.png", class: 'logo' %>
+      <a href="https://dlmf.nist.gov/LaTeXML/">
+        <%= image_tag "logo.png", class: 'logo', height: 30 %>
+      </a>
       <% if language_tabs.any? %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
