--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -2,7 +2,6 @@
 @import 'normalize';
 @import 'variables';
 @import 'icon-font';
-// @import 'rtl'; // uncomment to switch to RTL format
 
 /*
 Copyright 2008-2013 Concur Technologies, Inc.
@@ -75,8 +74,7 @@ html, body {
   .logo {
     display: block;
     max-width: 100%;
-    margin:auto;
-    padding:20px
+    margin-bottom: $logo-margin;
   }
 
   &>.search {
@@ -221,7 +219,7 @@ html, body {
     transform: rotate(-90deg) translate(-100%, 0);
     border-radius: 0 0 0 5px;
   }
-  padding: 0 1.5em 5em 0; // increase touch size area
+  padding: 0 1.5em 5em 0; 
   display: none;
   position: fixed;
   top: 0;
@@ -279,12 +277,13 @@ html, body {
 }
 
 .lang-selector {
+  display: flex;
   background-color: $lang-select-bg;
   width: 100%;
   font-weight: bold;
+  overflow-x: auto;
   a {
-    display: block;
-    float:left;
+    display: inline;
     color: $lang-select-text;
     text-decoration: none;
     padding: 0 10px;
@@ -315,9 +314,7 @@ html, body {
 // This is all the stuff with the light background in the left half of the page
 
 .content {
-  // fixes webkit rendering bug for some: see #538
   -webkit-transform: translateZ(0);
-  // to place content above the dark box
   position: relative;
   z-index: 30;
 
@@ -617,4 +614,17 @@ html, body {
 
 .highlight, .highlight .w {
   background-color: $code-bg;
+}
+
+.copy-clipboard {
+  float: right;
+  fill: #9DAAB6;
+  cursor: pointer;
+  opacity: 0.4;
+  height: 18px;
+  width: 18px;
+}
+
+.copy-clipboard:hover {
+  opacity: 0.8;
 }
